# openai-doc-assistant

./: .gitignore  README.md  pyproject.toml
src/: file_utils.py  instructions.txt  main.py  openai_client.py  processing.py
src/behaviors/: default.txt
